# QTimeLine

./: .clang-format  .clang-tidy  .cmake-format.py  .codespellrc  .gitignore  .gitlint  .markdownlint.jsonc  .pre-commit-config.yaml  CMakeLists.txt  main.cpp
database/: timeEntrys.db  timeEntrys.db-journal
src/: CMakeLists.txt  sqlstorage.cpp  sqlstorage.h  timeentry.cpp  timeentry.h  timeentrydatabasemanager.cpp  timeentrydatabasemanager.h  timerecord.cpp  timerecord.h  timerecorddatabasemanager.cpp  timerecorddatabasemanager.h  timerecordmodel.cpp  timerecordmodel.h
src/qml/: CMakeLists.txt  Main.qml
src/qml/Elements/: Header.qml  RoundButton.qml
src/qml/Singletons/: Colors.qml
src/qml/Views/: AppFrame.qml
tests/: CMakeLists.txt  main.cpp
tests/unit_tests/: tst_sqlstorage.cpp
